second commit and API confirmed to be working

--- a/First/appsettings.json
+++ b/First/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DataAccessSqliteProvider": "Data Source=SqliteDatabase//dataeventrecords.sqlite"
+    "DataAccessSqliteProvider": "Data Source=..//dummyDb.sqlite"
   },
   "Logging": {
     "LogLevel": {
